rootsy/400-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: rootsy
  name: rootsy
  labels:
    app: rootsy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: rootsy
  template:
    metadata:
      labels:
        app: rootsy
    spec:
      containers:
        - name: rootsy
          image: ${ROOTSY_IMAGE}:${ROOTSY_VERSION}
          ports:
            - name: rootsy
              containerPort: 9090
