rootsy/300-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rootsy
  namespace: rootsy

spec:
  ports:
    - protocol: TCP
      name: rootsy
      port: 9090
  selector:
    app: rootsy
